osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_import/test_import_unsorted_items_fails.txt
error: import rules are not sorted
--> main.sml:1:13
     |
   1 | Import(rules=['c.sml', 'b.sml', 'a.sml'])
     |              ^ sort imports lexicographically:
                    | `Import(rules=['a.sml', 'b.sml', 'c.sml'])`
